core/api/mblink.h

// ========== 类型定义 ==========

typedef struct MBlinkWindow* MBlinkHandle;
// ========== 共享 C 对象 (SharedObject) ==========
//
// 核心思想：Python/JS 共享同一个 QuickJS JSValue 对象。
// - Python 通过 ctypes 调用 set/get 操作同一个 C 对象
// - JS 通过 globalThis.<name> 直接读写同一个对象
// - Python 写入后自动触发 JS 内部 shared update 调度 → UI 刷新
//
// 用法：
//   Python: data = app.shared("data"); data.count = 0
//   JS:     data.count  →  0
//           py.increment()  →  Python: data.count += 1  →  UI 自动更新

// 不透明句柄
typedef struct MBlinkSharedObject* MBlinkSharedHandle;
typedef struct MBlinkLogViewObject* MBlinkLogViewHandle;
typedef struct MBlinkTerminalObject* MBlinkTerminalHandle;
// ---- 类型化 setter（自动触发内部 shared update 调度） ----

MBLINK_API int mblink_shared_set_int(MBlinkSharedHandle shared,
                                        const char* key, int64_t value);
MBLINK_API int mblink_shared_set_double(MBlinkSharedHandle shared,
                                           const char* key, double value);
MBLINK_API int mblink_shared_set_string(MBlinkSharedHandle shared,
                                           const char* key, const char* value);
MBLINK_API int mblink_shared_set_bool(MBlinkSharedHandle shared,
                                         const char* key, bool value);
MBLINK_API int mblink_shared_set_null(MBlinkSharedHandle shared,
                                         const char* key);
MBLINK_API int mblink_shared_set_json(MBlinkSharedHandle shared,
                                         const char* key, const char* json_str);
// ---- 类型化 getter ----

MBLINK_API int64_t mblink_shared_get_int(MBlinkSharedHandle shared,
                                            const char* key);
MBLINK_API double mblink_shared_get_double(MBlinkSharedHandle shared,
                                              const char* key);
// 返回值由调用者通过 mblink_free() 释放
MBLINK_API const char* mblink_shared_get_string(MBlinkSharedHandle shared,
                                                    const char* key);
MBLINK_API bool mblink_shared_get_bool(MBlinkSharedHandle shared,
                                          const char* key);
// 返回 JSON 字符串，调用者通过 mblink_free() 释放
MBLINK_API const char* mblink_shared_get_json(MBlinkSharedHandle shared,
                                                  const char* key);
// ---- 属性查询 ----

MBLINK_API int mblink_shared_get_type(MBlinkSharedHandle shared,
                                         const char* key);
MBLINK_API int mblink_shared_delete(MBlinkSharedHandle shared,
                                       const char* key);
MBLINK_API bool mblink_shared_has(MBlinkSharedHandle shared,
                                     const char* key);
// ---- 批量更新（抑制中间 shared update 调用） ----

MBLINK_API void mblink_shared_batch_begin(MBlinkSharedHandle shared);
MBLINK_API void mblink_shared_batch_end(MBlinkSharedHandle shared);
// ========== 原生 UI 对象句柄（LogView / Terminal） ==========

MBLINK_API MBlinkLogViewHandle mblink_logview_get(MBlinkHandle handle,
                                                    const char* element_id);
MBLINK_API void mblink_logview_destroy(MBlinkLogViewHandle logview);
MBLINK_API int mblink_logview_append(MBlinkLogViewHandle logview,
                                        const char* level,
                                        const char* source,
                                        const char* message);
MBLINK_API void mblink_logview_clear(MBlinkLogViewHandle logview);
MBLINK_API const char* mblink_logview_export(MBlinkLogViewHandle logview,
                                                const char* format);
MBLINK_API MBlinkTerminalHandle mblink_terminal_get(MBlinkHandle handle,
                                                      const char* element_id);
MBLINK_API void mblink_terminal_destroy(MBlinkTerminalHandle terminal);
MBLINK_API int mblink_terminal_write(MBlinkTerminalHandle terminal,
                                        const char* data);
MBLINK_API void mblink_terminal_clear(MBlinkTerminalHandle terminal);
MBLINK_API int mblink_terminal_execute(MBlinkTerminalHandle terminal,
                                          const char* command);
MBLINK_API int mblink_terminal_start_shell(MBlinkTerminalHandle terminal,
                                              const char* shell);
MBLINK_API int mblink_terminal_send_input(MBlinkTerminalHandle terminal,
                                             const char* input);
MBLINK_API void mblink_terminal_resize(MBlinkTerminalHandle terminal,
                                          int rows, int cols);
MBLINK_API const char* mblink_terminal_serialize(MBlinkTerminalHandle terminal);