bindings/python/mblink/_ffi.py


    # setter
    lib.mblink_shared_set_int.restype = c_int
    lib.mblink_shared_set_int.argtypes = [SH, c_char_p, c_int64]
    lib.mblink_shared_set_double.restype = c_int
    lib.mblink_shared_set_double.argtypes = [SH, c_char_p, c_double]
    lib.mblink_shared_set_string.restype = c_int
    lib.mblink_shared_set_string.argtypes = [SH, c_char_p, c_char_p]
    lib.mblink_shared_set_bool.restype = c_int
    lib.mblink_shared_set_bool.argtypes = [SH, c_char_p, c_bool]
    lib.mblink_shared_set_null.restype = c_int
    lib.mblink_shared_set_null.argtypes = [SH, c_char_p]
    lib.mblink_shared_set_json.restype = c_int
    lib.mblink_shared_set_json.argtypes = [SH, c_char_p, c_char_p]

    # getter
    lib.mblink_shared_get_int.restype = c_int64
    lib.mblink_shared_get_int.argtypes = [SH, c_char_p]
    lib.mblink_shared_get_double.restype = c_double
    lib.mblink_shared_get_double.argtypes = [SH, c_char_p]
    lib.mblink_shared_get_string.restype = c_void_p
    lib.mblink_shared_get_string.argtypes = [SH, c_char_p]
    lib.mblink_shared_get_bool.restype = c_bool
    lib.mblink_shared_get_bool.argtypes = [SH, c_char_p]
    lib.mblink_shared_get_json.restype = c_void_p
    lib.mblink_shared_get_json.argtypes = [SH, c_char_p]

    # 属性查询
    lib.mblink_shared_get_type.restype = c_int
    lib.mblink_shared_get_type.argtypes = [SH, c_char_p]
    lib.mblink_shared_delete.restype = c_int
    lib.mblink_shared_delete.argtypes = [SH, c_char_p]
    lib.mblink_shared_has.restype = c_bool
    lib.mblink_shared_has.argtypes = [SH, c_char_p]

    # 批量更新
    lib.mblink_shared_batch_begin.restype = None
    lib.mblink_shared_batch_begin.argtypes = [SH]
    lib.mblink_shared_batch_end.restype = None
    lib.mblink_shared_batch_end.argtypes = [SH]

    # 原生 UI 对象句柄
    LV = c_void_p
    TM = c_void_p

    lib.mblink_logview_get.restype = LV
    lib.mblink_logview_get.argtypes = [H, c_char_p]
    lib.mblink_logview_destroy.restype = None
    lib.mblink_logview_destroy.argtypes = [LV]
    lib.mblink_logview_append.restype = c_int
    lib.mblink_logview_append.argtypes = [LV, c_char_p, c_char_p, c_char_p]
    lib.mblink_logview_clear.restype = None
    lib.mblink_logview_clear.argtypes = [LV]
    lib.mblink_logview_export.restype = c_void_p
    lib.mblink_logview_export.argtypes = [LV, c_char_p]

    lib.mblink_terminal_get.restype = TM
    lib.mblink_terminal_get.argtypes = [H, c_char_p]
    lib.mblink_terminal_destroy.restype = None
    lib.mblink_terminal_destroy.argtypes = [TM]
    lib.mblink_terminal_write.restype = c_int
    lib.mblink_terminal_write.argtypes = [TM, c_char_p]
    lib.mblink_terminal_clear.restype = None
    lib.mblink_terminal_clear.argtypes = [TM]
    lib.mblink_terminal_execute.restype = c_int
    lib.mblink_terminal_execute.argtypes = [TM, c_char_p]
    lib.mblink_terminal_start_shell.restype = c_int
    lib.mblink_terminal_start_shell.argtypes = [TM, c_char_p]
    lib.mblink_terminal_send_input.restype = c_int
    lib.mblink_terminal_send_input.argtypes = [TM, c_char_p]
    lib.mblink_terminal_resize.restype = None
    lib.mblink_terminal_resize.argtypes = [TM, c_int, c_int]
    lib.mblink_terminal_serialize.restype = c_void_p
    lib.mblink_terminal_serialize.argtypes = [TM]
